src/parser/snapshots/rlox__parser__tests__parse_print_stmt.snap
---
source: src/parser/tests.rs
description: " print \"Hello\" + \", \" + \"world!\"; "
expression: "parse_stmts(r#\" print \"Hello\" + \", \" + \"world!\"; \"#)"
---
- PrintStmt:
    Binary:
      operator: Plus
      left:
        Binary:
          operator: Plus
          left:
            Literal:
              String: Hello
          right:
            Literal:
              String: ", "
      right:
        Literal:
          String: world!
